--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.11.17",
     "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
+    "mongoose": "^8.8.3",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
